# RomanNumerals

./: .gitignore  Makefile.am  configure.ac
src/: Makefile  Makefile.am  Makefile.in  romancalc.c  romancalc.h  str_replace.c  str_replace.h
tests/: Makefile  Makefile.am  Makefile.in  check_romancalc  check_romancalc.c
