#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([romancalc], [0.1], [crgrill@gmail.com])
AC_CONFIG_SRCDIR([src/romancalc.c])
AC_PROG_RANLIB

AM_INIT_AUTOMAKE([no-exeext])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile tests/Makefile])
AC_OUTPUT
